# MNIST-CPP-CUDA

./: CMakeLists.txt  README.md  cnn_mnist.py  conv_layer.cpp  conv_layer.h  data.cpp  data.h  dense.cpp  dense.h  main.cpp  maxPooling_flattening.cpp  maxPooling_flattening.h  neuron.cpp  neuron.h  training.cpp
lib/: conv_layer.hpp  dense.hpp  maxPooling_flattening.hpp  neuron.hpp  training.hpp
nnc/: all.c  cuda.cu  output.md  test.cu
src/: conv_layer.cpp  dense.cpp  maxPooling_flattening.cpp  neuron.cpp  training.cpp
